--- a/template/index.html
+++ b/template/index.html
@@ -1,186 +1,31 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <title>Title</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<!DOCTYPE html>  
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">  
+<head>  
+    <meta charset="utf-8" />  
+    <title></title>  
+    <meta name="viewport" content="width=device-width, initial-scale=1">  
+    <!--Link for Font awesome icons-->  
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  
+
+    <!--Links for Bootstrap-->  
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">  
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>  
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>  
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>  
+</head>  
+<body>  
+  
+        <div class="dropdown ">  
+            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">  
+              active
+            </button>  
+            <div class="dropdown-menu">  
+                <a class="dropdown-item" href="#"> <i class="fa fa-home"></i> Home </a>  
+                <a class="dropdown-item" href="#"> <i class="fa fa-address-book"></i> Contact </a>  
+                <a class="dropdown-item" href="#"> <i class="fa fa-bell"></i> Notifications </a>  
+                <a class="dropdown-item" href="#"><i class="fa fa-cog"></i> Setting </a>  
+            </div>  
+        </div>  
     
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="/test.css">
-    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
-</head>
-  <body>
-      <!-- Bootstrap NavBar -->
-<nav class="navbar navbar-expand-md navbar-dark bg-primary">
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarAdmin" aria-controls="navbarAdmin" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <a class="navbar-brand" href="index.html">
-      <span class="menu-collapsed">Project Management System</span>
-    </a>
-    <div class="collapse navbar-collapse" id="navbarAdmin">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#top">Acount</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#top">Login</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#top">Logout</a>
-        </li>
-        <!-- Dieses Menü ist bei größeren Geräten mit d-sm-none ausgeblendet.
-              Die Seitenleiste ist nicht für kleinere Bildschirme geeignet, daher kann dieses Dropdown-Menü alle nützlichen Seitenleisten-Elemente ausschließlich für kleinere Bildschirme enthalten -->
-        <li class="nav-item dropdown d-sm-block d-md-none">
-          <a class="nav-link dropdown-toggle" href="#" id="smallerscreenmenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Menu </a>
-          <div class="dropdown-menu" aria-labelledby="smallerscreenmenu">
-            <a class="dropdown-item" href="#top">Project manager</a>
-            <a class="dropdown-item" href="#top">Employee manager</a>
-            <!-- <a class="dropdown-item" href="#top">Tasks</a>
-            <a class="dropdown-item" href="#top">Etc..</a> -->
-          </div>
-        </li><!-- Menü für kleinere Geräte END -->
-      </ul>
-    </div>
-  </nav><!-- NavBar END -->
-  <!-- Bootstrap row -->
-  <div class="row" id="body-row">
-    <!-- Seitenleiste -->
-    <div id="sidebar-container" class="sidebar-expanded d-none d-md-block">
-      <!-- d- * verbirgt die Sidebar in kleineren Geräten. Die Einträge können im Navbar-Menü gespeichert werden -->
-      <!-- Bootstrap-Listengruppe -->
-      <ul class="list-group">
-        <!-- Trennzeichen mit Titel -->
-        <li class="list-group-item sidebar-separator-title text-muted d-flex align-items-center menu-collapsed">
-                  <small>MAIN MENU</small>
-              </li>
-        <!-- / END Separator -->
-        <!-- Menü mit Untermenü -->
-        <a href="#submenu1" data-toggle="collapse" aria-expanded="false" class="bg-dark list-group-item list-group-item-action flex-column align-items-start">
-          <div class="d-flex w-100 justyfy-content-start align-items-center">
-            <span class="fas fa-tachometer-alt fa-fw mr-3"></span>
-            <span class="menu-collapsed">Project Manager</span>
-            <span class="fas fa-angle-down ml-auto"></span>
-          </div>
-        </a>
-        <!-- Inhalt des Untermenüs -->
-        <div id="submenu1" class="collapse sidebar-submenu">
-          <a href="#" class="list-group-item list-group-item-action bg-dark text-white">
-            <span class="menu-collapsed">Add Project</span>
-          </a>
-          <a href="#" class="list-group-item list-group-item-action bg-dark text-white">
-            <span class="menu-collapsed">Manager</span>
-          </a>
-          <!-- <a href="#" class="list-group-item list-group-item-action bg-dark text-white">
-            <span class="menu-collapsed">Tables</span>
-          </a> -->
-        </div>
-        <a href="#submenu2" data-toggle="collapse" aria-expanded="false" class="bg-dark list-group-item list-group-item-action flex-column align-items-start">
-          <div class="d-flex w-100 justify-content-start align-items-center">
-           <span class="fas fa-user fa-fw mr-3"></span>
-           <span class="menu-collapsed">Employee Manager</span>
-           <span class="fas fa-angle-down ml-auto"></span>
-          </div>
-         </a>
-        <!-- Inhalt des Untermenüs -->
-        <div id='submenu2' class="collapse sidebar-submenu">
-                  <a href="#" class="list-group-item list-group-item-action bg-dark text-white">
-                      <span class="menu-collapsed">Add</span>
-                  </a>
-                  <a href="#" class="list-group-item list-group-item-action bg-dark text-white">
-                      <span class="menu-collapsed">List User</span>
-                  </a>
-              </div>
-
-              <!-- <a href="#" class="bg-dark list-group-item list-group-item-action">
-                  <div class="d-flex w-100 justify-content-start align-items-center">
-                      <span class="fas fa-tasks fa-fw mr-3"></span>
-                      <span class="menu-collapsed">Tasks</span>
-                  </div>
-              </a> -->
-
-              <a href="#submenu3" data-toggle="collapse" aria-expanded="false" class="bg-dark list-group-item list-group-item-action flex-column align-items-start">
-                <div class="d-flex w-100 justify-content-start align-items-center">
-                 <span class="fas fa-user fa-fw mr-3"></span>
-                 <span class="menu-collapsed">nhân viên</span>
-                 <span class="fas fa-angle-down ml-auto"></span>
-                </div>
-               </a>
-
-               <div id='submenu3' class="collapse sidebar-submenu">
-                <a href="#" class="list-group-item list-group-item-action bg-dark text-white">
-                    <span class="menu-collapsed">project</span>
-                </a>
-                <a href="#" class="list-group-item list-group-item-action bg-dark text-white">
-                    <span class="menu-collapsed">task</span>
-                </a>
-              </div>
-
-
-              <!-- Separator with title -->
-              <li class="list-group-item sidebar-separator-title text-muted d-flex align-items-center menu-collapsed">
-                  <small>OPTIONS</small>
-              </li>
-              <!-- /END Separator -->
-              <!-- <a href="#" class="bg-dark list-group-item list-group-item-action">
-                  <div class="d-flex w-100 justify-content-start align-items-center">
-                      <span class="fas fa-calendar fa-fw mr-3"></span>
-                      <span class="menu-collapsed">Acount</span>
-                  </div>
-              </a>
-              <a href="#" class="bg-dark list-group-item list-group-item-action">
-                  <div class="d-flex w-100 justify-content-start align-items-center">
-                      <span class="far fa-envelope fa-fw mr-3"></span>
-                      <span class="menu-collapsed">Messages <span class="badge badge-pill badge-primary ml-2">5</span></span>
-                  </div>
-              </a> -->
-              <!-- Separator without title -->
-              <li class="list-group-item sidebar-separator menu-collapsed"></li>
-              <!-- /END Separator -->
-              <a href="#" class="bg-dark list-group-item list-group-item-action">
-                  <div class="d-flex w-100 justify-content-start align-items-center">
-                      <span class="fa fa-question fa-fw mr-3"></span>
-                      <span class="menu-collapsed">Help</span>
-                  </div>
-              </a>
-              <!-- <a href="#top" data-toggle="sidebar-colapse" class="bg-dark list-group-item list-group-item-action d-flex align-items-center">
-                  <div class="d-flex w-100 justify-content-start align-items-center">
-                      <span id="collapse-icon" class="fa fa-2x mr-3"></span>
-                      <span id="collapse-text" class="menu-collapsed">Collapse</span>
-                  </div>
-              </a> -->
-      </ul><!-- List Group END-->
-    </div> <!-- Seitenleiste-container END -->
-    <!-- MAIN -->
-      <div class="col p-4">
-        <h2>Working Project</h2>
-        <div class="card mb-3 w-50">
-          <div class="card-body">
-            <h4 class="card-title">Project 1</h4>
-            <p> Your Task: 0/2</p>
-            <p >Your To-do: 2/3</p>
-            <button type="button" class="btn btn-warning">In-Prosess</button>
-            <a href="project-details.html" class="btn btn-primary">Detail</a>
-          </div>
-        </div>
-        <div class="card mb-3 w-50">
-          <div class="card-body">
-            <h4 class="card-title">Project 2</h4>
-            <p> Your Task: 2/2</p>
-            <p >Your To-do: 6/6</p>
-            <button type="button" class="btn btn-success">Done</button>
-            <a href="project-details.html" class="btn btn-primary">Detail</a>
-          </div>
-        </div>
-      </div><!-- Main Col END -->
-  </div><!-- body-row END -->
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="/main.js"></script>  
-</body>
+</body>  
 </html>
