--- a/template/project-details.html
+++ b/template/project-details.html
@@ -2,20 +2,31 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>Project details</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="/test.css">
-    <link rel="stylesheet" href="/project-details.css">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
+    <!-- <link rel="stylesheet" href="https://cdn.datatables.net/1.10.14/css/jquery.dataTables.min.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;1,800&display=swap" rel="stylesheet">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>  
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>  
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script> 
+<link rel="stylesheet" href="test.css">
+    <!-- <link rel="stylesheet" href="/project-details.css"> -->
+    <link rel="stylesheet" href="test-task-list.css">
+    <link rel="stylesheet" href="project-manager.css">
+
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"> -->
     <!-- <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css"> -->
 </head>
 <html>
-    <body>   
+    <body>  
+       <!--Navbar  -->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
             <a class="navbar-brand" href="#">Project Manager</a>
             <button
@@ -98,76 +109,160 @@
               
             </div>
           </nav>
-          
+          <!-- end Navbar -->
+        <!-- Main -->
+        <main class="content-wrapper">
+
+          <div class="section-body">
+              <div class="container p-30">
+                  <h3>Project detail</h3>
+                  <div class="btn-group" style="margin-top: 30px;">
+                      <button type="button" class="btn btn-success">Add user</button>
+                      <button type="button" class="btn btn-primary ">Edit</button>
+                      <button type="button" class="btn btn-danger ">Delete</button>
+                  </div>
+                  <div class="col-6">
+                      <div class="row">
+                          <div class="col-6 py-1"><strong>Created:</strong></div>
+                          <div class="col-6 py-1">09 Jun 2019 11:32AM</div>
+                          <div class="col-6 py-1"><strong>Creator:</strong></div>
+                          <div class="col-6 py-1">Nathan Guerrero</div>
+                          <div class="col-6 py-1"><strong>Task:</strong></div>
+                          <div class="col-6 py-1"><strong>23</strong></div>
+                          <div class="col-6 py-1"><strong>Todo:</strong></div>
+                          <div class="col-6 py-1"><strong>32</strong></div>
+                          <div class="col-6 py-1"><strong>Bug:</strong></div>
+                          <div class="col-6 py-1"><strong>5</strong></div>
+                          <div class="col-6 py-1"><strong>Team size:</strong></div>
+                          <div class="col-6 py-1">
+                              <span class="avatar avatar-sm">+8</span>
+                          </div>
+                          <div class="col-6 py-1"><strong>Members:</strong></div>
+                          <div class="col-6 py-1"><strong>Lương, Tuyên</strong></div>
+                          <div class="col-6 py-1"><strong>Status</strong></div>
+                          <div class="col-6 py-1"><strong><span class="badge badge-success">Done</span></strong></div>
+                      </div>
+                  </div>
+  
+                  
+              </div>
+          </div>
+  
+  
+          <!-- MAIN -->
+  
+  
+  
+          <!-- Main Col END -->
+      </main>
           <main class="content-wrapper">
-            <div class="container-fluid">
-              <div class="container m-4">
-                <h1 >Project's Name</h1>
-                <div class="page-todo bootstrap snippets bootdeys">
-                    <div class="col tasks">
-                        <div class="task-list">
-                            <h3>Tasks of this project</h3>
-                            <div class="priority high"><span>high priority</span></div>
-                            <div class="task high">
-                                <a href="#" class="a-color">
-                                    <div class="desc">
-                                        <div class="title">Lorem Ipsum</div>
-                                        <div>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</div>
-                                    </div>
-                                </a>
-                                
-                            </div>
-                            <div class="task high">
-                              <a href="#" class="a-color">
-                                <div class="desc">
-                                  <div class="title">Lorem Ipsum</div>
-                                  <div>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</div>
+            <div class="container p-30">
+              <div class="row">
+                <h1>Project Name</h1>
+                  <div class="col-md-12 main-datatable">
+                      <div class="card_body">
+                        <div class="task-list">Task List</div>
+                          <div class="row d-flex">
+                              <div class="col-sm-4 createSegment"> 
+                               <a class="btn dim_button create_new"> <span class="glyphicon glyphicon-plus"></span>New Task</a>
                               </div>
-                              </a>
-
-                            </div>
-                    
-                            <div class="priority medium"><span>medium priority</span></div>
-                    
-                            <div class="task medium">
-                              <a href="#" class="a-color">
-                                <div class="desc">
-                                  <div class="title">Lorem Ipsum</div>
-                                  <div>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</div>
-                              </div>
-                              </a>
-                            </div>
-                    
-                            <div class="priority low"><span>low priority</span></div>
-                    
-                            <div class="task low">
-                              <a href="#" class="a-color">
-                                <div class="desc">
-                                  <div class="title">Lorem Ipsum</div>
-                                  <div>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</div>
-                              </div>
-                              </a>
-
-                            </div>
-                            <div class="task low">
-                              <a href="#" class="a-color">
-                                <div class="desc">
-                                  <div class="title">Lorem Ipsum</div>
-                                  <div>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</div>
-                              </div>
-                              </a>
-
-                            </div>
-                            <div class="clearfix"></div>		
-                        </div>		
-                    </div>
-                    </div>
-            </div>
-                  <!-- MAIN -->
-
-            </div>
+                              <div class="col-sm-8 add_flex">
+                                  <div class="form-group searchInput">
+                                      <label for="email">Search:</label>
+                                      <input type="search" class="form-control" id="filterbox" placeholder=" ">
+                                  </div>
+                              </div> 
+                          </div>
+                          <div class="overflow-x">
+      
+                              <table style="width:100%; " id="filtertable" class="table cust-datatable dataTable no-footer">
+                                  <thead>
+                                      <tr>
+                                          <th style="min-width:20px; max-width: 50;">ID</th>
+                                          <th style="min-width:150px;">Name</th>
+                                          <th style="min-width:150px;">Priority</th>
+                                          <th style="min-width:100px;">Manager</th>
+                                          <th style="min-width:100px;">Due to</th>
+                                          <th style="min-width:150px;">Status</th>
+                                          <th style="min-width:150px;">Action</th>
+                                      </tr>
+                                  </thead>
+                                  <tbody >
+                                      <tr>
+                                          <td>1</td>
+                                          <td>Task1</td>
+                                          <td><span class="mode mode_high">High</span></td>
+                                          <td>Vũ Đức Tuyên</td>
+                                          <td>17-Apr-2020</td>
+                                          <td><span class="mode mode_working">Working</span></td>
+                                          <td> 
+                                              <a href="to-do-details.html">
+                                                <button type="button" class="btn btn-primary ">  
+                                                  Details
+                                                </button> 
+                                              </a>
+                                               
+                                         
+                                          </td>
+                                      </tr>  
+                                      <tr>
+                                        <td>1</td>
+                                        <td>Task2</td>
+                                        <td><span class="mode mode_normal">Normal</span></td>
+                                        <td>Vũ Đức Tuyên</td>
+                                        <td>17-Apr-2020</td>
+                                        <td><span class="mode mode_done">Done</span></td>
+                                        <td> 
+                                          <a href="to-do-details.html">
+                                            <button type="button" class="btn btn-primary ">  
+                                              Details
+                                            </button> 
+                                          </a>
+                                       
+                                        </td>
+                                    </tr> 
+                                    <tr>
+                                      <td>1</td>
+                                      <td>Task1</td>
+                                      <td><span class="mode mode_low">Low</span></td>
+                                      <td>Vũ Đức Tuyên</td>
+                                      <td>17-Apr-2020</td>
+                                      <td><span class="mode mode_working">Working</span></td>
+                                      <td> 
+                                        <a href="to-do-details.html">
+                                          <button type="button" class="btn btn-primary ">  
+                                            Details
+                                          </button> 
+                                        </a> 
+                                     
+                                      </td>
+                                  </tr> 
+                                  <tr>
+                                    <td>1</td>
+                                    <td>Task5</td>
+                                    <td><span class="mode mode_high">High</span></td>
+                                    <td>Vũ Đức Tuyên</td>
+                                    <td>17-Apr-2020</td>
+                                    <td><span class="mode mode_reviewing">Reviewing</span></td>
+                                    <td> 
+                                      <a href="to-do-details.html">
+                                        <button type="button" class="btn btn-primary ">  
+                                          Details
+                                        </button> 
+                                      </a>  
+                                   
+                                    </td>
+                                </tr>      
+                                  </tbody>
+                              </table>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
           </main>
-          
+          <!-- ENd Main -->
+          <!-- Footter -->
           <footer class="footer">
             <div class="container">
                 <div class="text-center">
@@ -175,9 +270,39 @@
                 </div>
             </div>
           </footer>
-          <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<script src="test.js"></script>
+          <!-- end Footter -->
+          <!-- <script src="https://cdn.datatables.net/1.10.14/js/jquery.dataTables.min.js"></script> -->
+          <script >
+              $(document).ready(function() {
+              var dataTable = $('#filtertable').DataTable({
+                  "pageLength":5,
+                  'aoColumnDefs':[{
+                      'bSortable':false,
+                      'aTargets':['nosort'],
+                  }],
+                  columnDefs:[
+                      {type:'date-dd-mm-yyyy',aTargets:[5]}
+                  ],
+                  "aoColumns":[
+                      null,
+                      null,
+                      null,
+                      null,
+                      null,
+                      null,
+                      null
+                  ],
+                  "order":false,
+                  "bLengthChange":false,
+                  "dom":'<"top">ct<"top"p><"clear">'
+              });
+              $("#filterbox").keyup(function(){
+                  dataTable.search(this.value).draw();
+              });
+              
+          } );
+          
+          </script>
 
 
         
