--- a/template/admin-final/project-details.html
+++ b/template/admin-final/project-details.html
@@ -10,21 +10,18 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
-  <!-- <link rel="stylesheet" href="https://cdn.datatables.net/1.10.14/css/jquery.dataTables.min.css"> -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-  <link
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.css" >
+    <link
     href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;1,800&display=swap"
     rel="stylesheet">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+
+
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="task-list.css">
   <link rel="stylesheet" href="project-manager.css">
 
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"> -->
-  <!-- <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css"> -->
 </head>
 <html>
 
@@ -126,7 +123,7 @@
             <div class="task-list">Task List</div>
             <div class="row d-flex">
               <div class="col-sm-4 createSegment">
-                <a class="btn dim_button create_new"> <span class="glyphicon glyphicon-plus"></span>New Task</a>
+                <a class="btn dim_button create_new" data-toggle="modal" data-target="#new-task"> <span class="glyphicon glyphicon-plus"></span>New Task</a>
               </div>
               <div class="col-sm-8 add_flex">
                 <div class="form-group searchInput">
@@ -306,7 +303,7 @@
           <div class="modal-dialog modal-lg" role="document">
               <div class="modal-content">
                   <div class="modal-header">
-                      <h5 class="modal-title" id="exampleModalLabel">Add project</h5>
+                      <h5 class="modal-title" id="exampleModalLabel">Details project</h5>
                       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                           <span aria-hidden="true">&times;</span>
                       </button>
@@ -356,7 +353,89 @@
               </div>
           </div>
       </div>
-      <!-- modal project END-->
+      <!-- modal project END
+       -->
+       <!-- modal new task -->
+                 <!-- Modal -->
+
+                 <div class="modal fade" id="new-task" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                  <div class="modal-dialog modal-lg" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Task Details</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                          <div class="form-group row">
+                              <label for="inputName" class="col-sm-3 col-form-label">Task Name<span
+                                      class="text-danger">*</span></label>
+                              <div class="col-sm-9">
+                                  <input type="Text" class="form-control" id="inputName" placeholder="Name">
+                              </div>
+                          </div>
+                          <div class="form-group row">
+                              <label class="col-md-3 col-form-label">Due <span class="text-danger">*</span></label>
+                              <div class="col-md-9" style="display: flex;">
+                                  <input type="text" class="form-control datepicker" name="date" value="" >
+                                  
+                                  <span style="padding: 10px;">To</span>
+                                  <input type="text" class="form-control datepicker" name="date" value="" >
+                                 
+                              </div>
+                          </div>
+                          <div class="form-group row">
+                              <label for="exampleFormControlSelect1" class="col-sm-3 col-form-label">Priority<span
+                                      class="text-danger">*</span></label>
+                              <div class="col-sm-9">
+                                  <select class="form-control" id="exampleFormControlSelect1">
+                                      <option>High</option>
+                                      <option>Normal</option>
+                                      <option>Low</option>
+                                  </select>
+                              </div>
+                          </div>
+                          <div class="form-group row">
+                              <label class="col-md-3 col-form-label">Description <span class="text-danger">*</span></label>
+                              <div class="col-md-9">
+                                  <textarea rows="4" class="form-control no-resize" placeholder="Descriptions"></textarea>
+                              </div>
+                          </div>
+                          <div class="form-group row">
+                              <label class="col-md-3 col-form-label">
+                                  Assign for<span class="text-danger">*</span></label>
+                              </label>
+                              <div class="col-md-9">
+                                  <select class="selectpicker" data-live-search="true" title="Select User">
+                                      
+                                      <option data-tokens="">User1</option>
+                                      <option data-tokens="">User2</option>
+                                      <option data-tokens="">User3</option>
+                                    </select>
+                              </div>
+                          </div>
+                          <div class="form-group row">
+                              <label class="col-md-3 col-form-label">
+                                  Status<span class="text-danger">*</span></label>
+                              </label>
+                              <div class="col-md-7">
+                                  <select class="selectpicker"  title="Select Status">
+                                      <option data-tokens="">Working</option>
+                                      <option data-tokens="">On-Reviewing</option>
+                                      <option data-tokens="">Done</option>
+                                    </select>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Save changes</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+       <!-- modal new task END -->
   <!-- ENd Main -->
   <!-- Footter -->
   <footer class="footer">
@@ -368,39 +447,29 @@
   </footer>
   <!-- end Footter -->
   <!-- <script src="https://cdn.datatables.net/1.10.14/js/jquery.dataTables.min.js"></script> -->
-  <script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
+  <!-- (Optional) Latest compiled and minified JavaScript translation files -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/i18n/defaults-*.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js" integrity="sha512-AIOTidJAcHBH2G/oZv9viEGXRqDNmfdPVPYOYKGy3fti0xIplnlgMHUGfuNRzC6FkzIo0iIxgFnr9RikFxK+sw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script>
+        $(".datepicker").datetimepicker({
+            datepicker:true,
+            timepicker: false,
+            format:'y-m-d'
+
+        });</script>
+  <!-- <script>
     $(document).ready(function () {
-      var dataTable = $('#filtertable').DataTable({
-        "pageLength": 5,
-        'aoColumnDefs': [{
-          'bSortable': false,
-          'aTargets': ['nosort'],
-        }],
-        columnDefs: [
-          { type: 'date-dd-mm-yyyy', aTargets: [5] }
-        ],
-        "aoColumns": [
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null
-        ],
-        "order": false,
-        "bLengthChange": false,
-        "dom": '<"top">ct<"top"p><"clear">'
-      });
       $("#filterbox").keyup(function () {
         dataTable.search(this.value).draw();
       });
 
     });
 
-  </script>
-
-
+  </script> -->
 
 </body>
 
